<resources>
    <string name="app_name" translatable="false">MyBoardingPassDesign</string>
    <string name="passenger_label">PASSENGER</string>
    <string name="passenger_name" translatable="false">MR. DEVELOPER</string>
    <string name="origin_label">SOURCE</string>
    <string name="origin_code" translatable="false">PNQ</string>
    <string name="destination_label">DESTINATION</string>
    <string name="destination_code" translatable="false">DEL</string>
    <string name="flight_code" translatable="false">XPX X46X</string>
    <string name="boarding_time_label">BOARDING TIME</string>
    <string name="boarding_time" translatable="false">08:10 PM</string>
    <string name="departure_time_label">DEPARTURE</string>
    <string name="departure_time" translatable="false">08:40 PM</string>
    <string name="arrival_time" translatable="false">06:40 PM</string>
    <string name="arrival_time_label">ARRIVAL</string>
    <string name="boarding_in_time" translatable="false">00:15</string>
    <string name="boarding_in_label">BOARDING IN</string>
    <string name="terminal_label">TERMINAL</string>
    <string name="gate_label">PORTE</string>
    <string name="seat_label">SIÈGE</string>
    <string name="terminal" translatable="false">2</string>
    <string name="gate" translatable="false">58B</string>
    <string name="seat" translatable="false">24A</string>
    <string name="countDownFormat" translatable="false">%1$02d:%2$02d</string>
    <string name="timeFormat" translatable="false">hh:mm a</string>

    <!--Strings for accessibility-->
    <string name="origin_airport" translatable="false">Chennai Airport</string>
    <string name="destination_airport" translatable="false">New Delhi Airport</string>

</resources>
