<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <TextView
            android:id="@+id/tv_sourceLabel"
            style="@style/styleForLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/origin_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_destinationLabel"
            style="@style/styleForLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/destination_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_leftRectangle"
            android:layout_width="80dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_sourceLabel"
            app:layout_constraintStart_toEndOf="@+id/tv_sourceLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_sourceLabel"
            app:srcCompat="@drawable/shape_rectangle_stroke" />

        <ImageView
            android:id="@+id/iv_rightRectangle"
            android:layout_width="80dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_destinationLabel"
            app:layout_constraintStart_toEndOf="@+id/tv_destinationLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_destinationLabel"
            app:srcCompat="@drawable/shape_rectangle_stroke" />

        <ImageView
            android:id="@+id/iv_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/iv_rightRectangle"
            app:layout_constraintEnd_toStartOf="@+id/iv_rightRectangle"
            app:layout_constraintStart_toEndOf="@+id/iv_leftRectangle"
            app:layout_constraintTop_toBottomOf="@+id/iv_rightRectangle"
            app:srcCompat="@drawable/shape_rectangle_stroke" />

        <TextView
            android:id="@+id/tv_source"
            style="@style/styleForOtherFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/iv_divider"
            app:layout_constraintEnd_toStartOf="@+id/iv_divider"
            app:layout_constraintStart_toStartOf="@+id/iv_leftRectangle"
            app:layout_constraintTop_toBottomOf="@+id/iv_divider"
            tools:text="@string/origin_code" />

        <TextView
            android:id="@+id/tv_destination"
            style="@style/styleForOtherFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/iv_divider"
            app:layout_constraintEnd_toEndOf="@+id/iv_rightRectangle"
            app:layout_constraintStart_toEndOf="@+id/iv_divider"
            app:layout_constraintTop_toBottomOf="@+id/iv_divider"
            tools:text="@string/destination_code" />

        <ImageView
            android:id="@+id/iv_planeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/iv_divider"
            app:layout_constraintEnd_toEndOf="@+id/iv_divider"
            app:layout_constraintStart_toStartOf="@+id/iv_divider"
            app:srcCompat="@drawable/plane"/>

        <TextView
            android:id="@+id/tv_flightCode"
            style="@style/styleForFlightCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_divider"
            app:layout_constraintStart_toStartOf="@+id/iv_divider"
            app:layout_constraintTop_toBottomOf="@+id/iv_divider"
            tools:text="@string/flight_code" />

        <TextView
            android:id="@+id/tv_boardingTimeLabel"
            style="@style/styleForLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/boarding_time_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_leftRectangle" />

        <TextView
            android:id="@+id/tv_boardingTime"
            style="@style/styleForImportantInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tv_boardingTimeLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_boardingTimeLabel"
            tools:text="@string/boarding_time" />

        <TextView
            android:id="@+id/tv_boardingINLabel"
            style="@style/styleForLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/boarding_in_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_leftRectangle" />

        <TextView
            android:id="@+id/tv_boardingIN"
            style="@style/styleForBoardingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tv_boardingINLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_boardingINLabel"
            tools:text="@string/boarding_in_time" />


    </android.support.constraint.ConstraintLayout>
</layout>
