<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kumar.mrdroid.myboardingpassdesign.MainActivity">

    <TextView
        android:id="@+id/tv_passengerLabel"
        style="@style/styleForLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/passenger_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_passangerName"
        style="@style/styleForImportantInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_passengerLabel"
        app:layout_constraintTop_toBottomOf="@+id/tv_passengerLabel"
        tools:text="@string/passenger_name" />

    <TextView
        android:id="@+id/tv_sourceLabel"
        style="@style/styleForLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/origin_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_passangerName" />

    <TextView
        android:id="@+id/tv_destinationLabel"
        style="@style/styleForLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/destination_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_passangerName" />

    <ImageView
        android:id="@+id/iv_leftRectangle"
        android:layout_width="80dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_sourceLabel"
        app:layout_constraintStart_toEndOf="@+id/tv_sourceLabel"
        app:layout_constraintTop_toBottomOf="@+id/tv_sourceLabel"
        app:srcCompat="@drawable/shape_rectangle_stroke" />

    <ImageView
        android:id="@+id/iv_rightRectangle"
        android:layout_width="80dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_destinationLabel"
        app:layout_constraintStart_toEndOf="@+id/tv_destinationLabel"
        app:layout_constraintTop_toBottomOf="@+id/tv_destinationLabel"
        app:srcCompat="@drawable/shape_rectangle_stroke" />

    <ImageView
        android:id="@+id/iv_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/iv_rightRectangle"
        app:layout_constraintEnd_toStartOf="@+id/iv_rightRectangle"
        app:layout_constraintStart_toEndOf="@+id/iv_leftRectangle"
        app:layout_constraintTop_toBottomOf="@+id/iv_rightRectangle"
        app:srcCompat="@drawable/shape_rectangle_stroke" />

    <TextView
        android:id="@+id/tv_source"
        style="@style/styleForOtherFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_divider"
        app:layout_constraintEnd_toStartOf="@+id/iv_divider"
        app:layout_constraintStart_toStartOf="@+id/iv_leftRectangle"
        app:layout_constraintTop_toBottomOf="@+id/iv_divider"
        tools:text="@string/origin_code" />

    <TextView
        android:id="@+id/tv_destination"
        style="@style/styleForOtherFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_divider"
        app:layout_constraintEnd_toEndOf="@+id/iv_rightRectangle"
        app:layout_constraintStart_toEndOf="@+id/iv_divider"
        app:layout_constraintTop_toBottomOf="@+id/iv_divider"
        tools:text="@string/destination_code" />

    <ImageView
        android:id="@+id/iv_planeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_divider"
        app:layout_constraintEnd_toEndOf="@+id/iv_divider"
        app:layout_constraintStart_toStartOf="@+id/iv_divider"
        app:srcCompat="@drawable/plane"/>

    <TextView
        android:id="@+id/tv_flightCode"
        style="@style/styleForFlightCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_divider"
        app:layout_constraintStart_toStartOf="@+id/iv_divider"
        app:layout_constraintTop_toBottomOf="@+id/iv_divider"
        tools:text="@string/flight_code" />


</android.support.constraint.ConstraintLayout>
